[NEW] Improved functionality, added several controllers
Signed-off-by: GiuliaPais <giuliapais1@gmail.com>