@@ -59,8 +59,13 @@
 			<plugin>
 				<groupId>org.openjfx</groupId>
 				<artifactId>javafx-maven-plugin</artifactId>
-				<version>0.0.4</version>
+				<version>0.0.5</version>
 				<configuration>
+					<options>
+						<option>--add-opens java.base/java.lang.reflect=com.jfoenix</option>
+						<option>--add-exports javafx.graphics/com.sun.javafx.scene=com.jfoenix</option>
+					</options>
+					<launcher>Il_Paroliere</launcher>
 					<mainClass>uninsubria.client.gui.Launcher</mainClass>
 				</configuration>
 			</plugin>
